<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

   <name>mujoco_interface</name>
   <version>0.0.0</version>
   <description>Provides ROS2 communication with MuJoCo simulation.</description>
   <maintainer email="jonathan.woolfrey@gmail.com">Woolfrey</maintainer>
   <license>GNU General Public License GPLv3</license>
   
   <buildtool_depend>ament_cmake</buildtool_depend>
   
   <!-- Necessary dependencies for ROS2 launch files -->
   <depend>launch</depend>
   <depend>launch_ros</depend>
   
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>

   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   
   <export>
     <build_type>ament_cmake</build_type>
   </export>
   
</package>

